<resources>
    <string name="app_name">狂掃蕃茄</string>

    <!-- Global related to login -->
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="login">登入</string>
    <string name="please_login">"請登入"</string>
    <string name="email">請輸入E-mail</string>
    <string name="password">請輸入密碼</string>
    <string name="forget_password">忘記密碼</string>
    <string name="forget_email">請輸入E-mail:</string>
    <string name="send">送出</string>
    <string name="dialog_send">已發送重設密碼連結至您的信箱</string>
    <string name="confirm">確認</string>
    <string name="regist">我要註冊</string>
    <string name="invalid_email">信箱格式錯誤</string>
    <string name="invalid_password">密碼至少必須輸入8個字元</string>
    <string name="invalid_confirm">密碼不一致</string>
    <string name="invalid_name">暱稱為必填</string>

    <!-- Global related to register-->
    <string name="confirm_register">註冊</string>
    <string name="back">回前頁</string>
    <string name="or">或</string>
    <string name="fill_email">E-mail</string>
    <string name="fill_password">密碼</string>
    <string name="confirm_password">確認密碼</string>
    <string name="fill_identity">考生種類</string>
    <string name="fill_name">使用者暱稱</string>

    <!-- clock的內容-->
    <string name="clock_dialog_msg">"任務計時結束，是否需要增加一顆蕃茄時長?"</string>
    <string name="clock_dialog_yes">"是"</string>
    <string name="clock_dialog_no">"否"</string>

    <!-- label的內容-->
    <string name="tomato_fragment">Tomato</string>

    <!-- fragment的內容-->
    <string name="show_done_task">顯示已完成項目</string>
    <string name="hide_done_task">隱藏已完成項目</string>

    <!-- menu的內容-->
    <string name="title_alarm">鬧鐘</string>
    <string name="title_tomato">番茄鐘</string>
    <string name="title_list">待辦事項</string>

    <!-- task的內容-->
    <string name="task_name">任務名稱</string>
    <string name="task_time">0分鐘</string>

    <!-- tomato的內容-->
    <string name="tomato_add">新增任務...</string>
    <string name="tomato_edit">編輯任務...</string>
    <string name="tomato_undone">尚未完成</string>
    <string name="tomato_on_time">時間內完成</string>
    <string name="tomato_delay">延後完成</string>
    <string name="tomato_goal">今日目標</string>
    <string name="tomato_use_sample">使用範本</string>
    <string name="tomato_save_as_sample">儲存範本</string>
    <string name="tomato_toast_empty_data">任務名稱及番茄數量為必填</string>

    <!-- list的內容-->
    <string name="list_add">新增待辦事項...</string>
    <string name="list_edit">編輯待辦事項...</string>
    <string name="list_goal">今日目標</string>
    <string name="list_done">今日完成</string>
    <string name="list_undone">尚未完成</string>
    <string name="list_toast_empty_data">待辦事項名稱為必填</string>

    <!-- setting的內容-->
    <string name="setting_tomato_time">番茄時長</string>
    <string name="setting_short_relex_time">短休息時長</string>
    <string name="setting_long_relex_time">長休息時長</string>
    <string name="setting_directly_go_to_next_task">自動開始下個任務</string>
    <string name="setting_shake">震動</string>
    <string name="setting_ring">鈴聲</string>
    <string name="setting_tomato_info">一項任務中，每次需專注的時間</string>
    <string name="setting_short_relex_info">一項任務中，完成一個番茄時長後可休息的時間</string>
    <string name="setting_long_relex_info">兩項任務間的時間間隔</string>
    <string name="setting_logout">登出</string>

    <!-- API的內容-->
    <string name="network_error_connected_fail">無網路連接，請檢查網路設置後再試</string>
    <string name="network_error_sync_data_fail">資料備份失敗，請稍後再試</string>
    <string name="network_error_send_email_fail">寄信失敗，請確認信箱是否存在</string>
    <string name="network_error_general">連線失敗，請稍後再試</string>

</resources>
